fix link sizes on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,7 +15,6 @@ a:hover {
 
 a, a:hover {
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
   font-style: normal;
   font-weight: normal;
   color: #D9D9D9
